** Fixed a build problem on AIX (use of func_data identifier)
** Fixed a segmentation fault which occurred when hashx-ref or hashx-set! was
called with an associator proc that returns neither a pair nor #f.
** Secondary threads now always return a valid module for (current-module).
** Avoid MacOS build problems caused by incorrect combination of "64"
system and library calls.
** Fixed build with Sun Studio (Solaris 9)
** Fixed wrong-type-arg errors when creating zero length SRFI-4
uniform vectors on AIX.
** Fixed a deadlock that occurs upon GC with multiple threads.
** Fixed compile problem with GCC on Solaris and AIX (use of _Complex_I)
** Fixed autotool-derived build problems on AIX 6.1.
** Fixed MacOS build problem caused by use of rl_get_keymap(_name)

* New modules (see the manual for details)

** `(srfi srfi-69)'

* Documentation fixes and improvements

** Removed premature breakpoint documentation

The features described are not available in the series of 1.8.x
releases, so the documentation was misleading and has been removed.

** More about Guile's default *random-state* variable

** GOOPS: more about how to use `next-method'

* Changes to the distribution

** Corrected a few files that referred incorrectly to the old GPL + special exception licence

In fact Guile since 1.8.0 has been licensed with the GNU Lesser
General Public License, and the few incorrect files have now been
fixed to agree with the rest of the Guile distribution.

** Removed unnecessary extra copies of COPYING*

The distribution now contains a single COPYING.LESSER at its top level.


Changes in 1.8.3 (since 1.8.2)

* New modules (see the manual for details)

** `(srfi srfi-35)'
** `(srfi srfi-37)'

* Bugs fixed

** The `(ice-9 slib)' module now works as expected
** Expressions like "(set! 'x #t)" no longer yield a crash
** Warnings about duplicate bindings now go to stderr
** A memory leak in `make-socket-address' was fixed